--- a/lcl_pokemon_rest/build.gradle
+++ b/lcl_pokemon_rest/build.gradle
@@ -15,15 +15,35 @@ dependencies {
     implementation 'org.springframework:spring-web:5.3.10'
     implementation 'org.springframework:spring-webmvc:5.3.10'
     implementation 'org.springframework:spring-context:5.3.10'
-    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
-    implementation 'org.postgresql:postgresql:42.2.23'
+    implementation 'org.springframework:spring-jdbc:5.3.10'
+
+    // MyBatis dependencies
+    implementation 'org.mybatis:mybatis:3.5.6'
+    implementation 'org.mybatis:mybatis-spring:2.0.6'
+
+    // PostgreSQL JDBC driver
+    implementation 'org.postgresql:postgresql:42.3.1'
+
+    // Servlet API for web applications
     implementation 'javax.servlet:jstl:1.2'
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
-    providedRuntime 'org.apache.tomcat.embed:tomcat-embed-core:9.0.50'
+
+    // Lombok for reducing boilerplate code
+    implementation 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+
+    // Testing dependencies
     testImplementation 'org.springframework:spring-test:5.3.10'
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
+    testImplementation 'org.mockito:mockito-core:4.5.1'
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'
 }
 
 war {
     archiveFileName = 'app.war'
+}
+
+test {
+    useJUnitPlatform()
 }
